--- a/resources/styles.css
+++ b/resources/styles.css
@@ -10,6 +10,15 @@
   height: 100%;
 }
 
+#torch {
+  x: 0;
+  y: 0;
+  width:100%;
+  height:100%;
+  opacity: 0;
+  fill:white;
+}
+
 #calendar {
   font-family: "Tungsten-Medium";
   fill: 'fb-white';
