--- a/resources/styles.css
+++ b/resources/styles.css
@@ -39,19 +39,15 @@
 }
 
 #battery-icon {
-  width: 18;
-  height: 18;
-  x: 40;
-  y: 300;
-  fill: white;
+  x: 44;
+  y: 316;
+  font-size: 20;
 }
 
 #battery-icon-charge {
-  width: 18;
-  height: 18;
-  x: 40;
-  y: 300;
-  fill: "fb-aqua";
+  x: 44;
+  y: 316;
+  font-size: 20;
 }
 
 #battery-percent {
