--- a/resources/styles.css
+++ b/resources/styles.css
@@ -185,3 +185,86 @@
   y: 260;
   text-anchor: end;
 }
+
+/* Activities ******************************** */
+
+#steps {
+  fill: orangered;
+  font-family: "Tungsten-Medium";
+}
+
+#distance {
+  fill: royalblue;
+  font-family: "Tungsten-Medium";
+}
+
+#calories {
+  fill: yellow;
+  font-family: "Tungsten-Medium";
+}
+
+#elevationGain {
+  fill: magenta;
+  font-family: "Tungsten-Medium";
+}
+
+#activeZoneMinutes {
+  fill: green;
+  font-family: "Tungsten-Medium";
+}
+
+.progress {
+  x: 26;
+  y: 13;
+  height: 7;
+  width: 110;
+}
+
+.line {
+  x: 26;
+  y: 16;
+  height: 1;
+  width: 100%-44;
+}
+
+.tgt-no {
+  cx: 100%-18;
+  cy: 16;
+  r: 4;
+}
+
+.tgt-yes {
+  cx: 100%-18;
+  cy: 16;
+  r: 8;
+  opacity: 0;
+}
+
+.icon {
+  x: 4;
+  y: 14;
+  font-size: 20;
+}
+
+/*
+.bar-icon {
+  width: 30;
+  height: 30;
+  x:0;
+  y:0;
+}
+*/
+
+.count {
+  font-size: 22;
+  x: 26;
+  y: 10;
+  text-length: 12;
+}
+
+.countGoal {
+  font-size: 22;
+  x: "100%-24";
+  y: 10;
+  text-length: 12;
+}
