--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,13 +1,6 @@
-.defaultText {
-  font-size: 32;
-  font-family: System-Regular;
-  font-weight: regular;
-  text-length: 32;
-}
-
-#background {
-  width: 100%;
-  height: 100%;
+#root {
+  font-family: "Tungsten-Medium";
+  fill: "fb-blue";
 }
 
 #torch {
@@ -19,86 +12,87 @@
   fill: white;
 }
 
-#calendar {
-  font-family: "Tungsten-Medium";
-  fill: "fb-white";
-}
+/* Calendar ********************************** */
 
-#calendar-day {
-  x: 168;
-  y: 40;
-  font-size: 50;
-  text-anchor: middle;
+#calendar {
+  fill: "fb-white";
 }
 
 #calendar-date {
-  x: 168;
-  y: 72;
-  font-size: 40;
-  text-anchor: middle;
-}
-
-#clock {
-  font-family: "Tungsten-Medium";
-  fill: "fb-white";
-}
-
-#clock-hour {
-  x: "100%-108";
-  y: 333;
-  font-size: 90;
-}
-
-#clock-separator {
-  x: 228;
-  y: 312;
-  font-size: 42;
-}
-
-#clock-minutes {
-  x: 234;
-  y: 322;
-  font-size: 74;
-}
-
-#clock-seconds {
-  x: 288;
-  y: 300;
-  font-size: 42;
-}
-
-#hr {
-  font-family: "Tungsten-Medium";
-  fill: "fb-white";
-}
-
-#hr-zone {
-  x: 114;
-  y: 294;
-  font-size: 34;
-  text-length: 10;
-  text-anchor: middle;
-}
-
-#hr-value {
-  x: 114;
-  y: 330;
-  font-size: 46;
-  text-length: 3;
+  x: "50%";
+  y: "50%";
+  font-size: 32;
   text-anchor: end;
 }
 
-#hr-diastole {
-  x: 120;
-  y: 325;
-  font-size: 34;
+#days {
+  fill: "fb-extra-dark-gray";
 }
 
-#hr-systole {
-  x: 127;
-  y: 320;
-  font-size: 20;
+#days-mon {
+  x: "50%-86";
+  y: "50%";
+  text-anchor: middle;
 }
+
+#days-tue {
+  x: "50%-55";
+  y: "50%";
+  text-anchor: middle;
+}
+
+#days-wed {
+  x: "50%-25";
+  y: "50%";
+  text-anchor: middle;
+}
+
+#days-thu {
+  x: "50%+7";
+  y: "50%";
+  text-anchor: middle;
+}
+
+#days-fri {
+  x: "50%+33";
+  y: "50%";
+  text-anchor: middle;
+}
+
+#days-sat {
+  x: "50%+59";
+  y: "50%";
+  text-anchor: middle;
+}
+
+#days-sun {
+  x: "50%+89";
+  y: "50%";
+  text-anchor: middle;
+}
+
+/* Clock ************************************* */
+
+#clock {
+  fill: "fb-white";
+}
+
+#clock-time {
+  x: "50%";
+  y: "50%";
+  font-size: 80;
+  text-anchor: middle;
+  fill: "fb-white";
+}
+
+#clock-seconds {
+  x: "50%+62";
+  y: "50%";
+  font-size: 36;
+  fill: "fb-peach";
+}
+
+/* HRM *************************************** */
 
 /* Activities ******************************** */
 
@@ -186,19 +180,24 @@
 /* Profile *********************************** */
 
 .value {
-  x: 300;
-  y: 255;
+  x: "50%";
+  y: "50%";
   font-size: 24;
-  font-family: "Tungsten-Medium";
-  fill: white;
   text-anchor: end;
+  fill: "fb-gray";
 }
 
 .value-icon {
-  x: 320;
-  y: 252;
+  x: "50%+21";
+  y: "50%-3";
   font-size: 18;
-  font-family: "Tungsten-Medium";
-  fill: white;
   text-anchor: end;
+}
+
+.value-right {
+  x: "50%+22";
+  y: "50%";
+  font-size: 24;
+  text-anchor: start;
+  fill: "fb-gray";
 }
