--- a/resources/styles.css
+++ b/resources/styles.css
@@ -15,166 +15,103 @@
 /* Calendar ********************************** */
 
 #calendar {
-  fill: "fb-white";
+  fill: "fb-black";
 }
 
-#calendar-date {
-  x: "50%";
+#calendar-number {
+  x: "50%+24";
   y: "50%";
-  font-size: 32;
+  font-size: 36;
   text-anchor: end;
 }
 
-#days {
-  fill: "fb-extra-dark-gray";
-}
-
-#days-mon {
-  x: "50%-86";
+#calendar-day {
+  x: "50%";
   y: "50%";
-  text-anchor: middle;
-}
-
-#days-tue {
-  x: "50%-55";
-  y: "50%";
-  text-anchor: middle;
-}
-
-#days-wed {
-  x: "50%-25";
-  y: "50%";
-  text-anchor: middle;
-}
-
-#days-thu {
-  x: "50%+7";
-  y: "50%";
-  text-anchor: middle;
-}
-
-#days-fri {
-  x: "50%+33";
-  y: "50%";
-  text-anchor: middle;
-}
-
-#days-sat {
-  x: "50%+59";
-  y: "50%";
-  text-anchor: middle;
-}
-
-#days-sun {
-  x: "50%+89";
-  y: "50%";
-  text-anchor: middle;
+  font-size: 36;
+  text-anchor: end;
 }
 
 /* Clock ************************************* */
 
 #clock {
-  fill: "fb-white";
+  fill: "fb-black";
 }
 
 #clock-time {
   x: "50%";
   y: "50%";
-  font-size: 80;
+  font-size: 100;
   text-anchor: middle;
-  fill: "fb-white";
 }
 
 #clock-seconds {
-  x: "50%+62";
+  x: "50%+74";
   y: "50%";
-  font-size: 36;
-  fill: "fb-peach";
+  font-size: 44;
 }
-
-/* HRM *************************************** */
 
 /* Activities ******************************** */
 
+.progress-background {
+  x1: "50%";
+  y1: 40;
+  x2: "50%";
+  y2: 172;
+  stroke-width: 32;
+  stroke-linecap: "butt";
+  fill: "darkseagreen";
+}
+
+.progress-bar {
+  x1: "50%";
+  y1: 90;
+  x2: "50%";
+  y2: 172;
+  stroke-width: 32;
+  stroke-linecap: "butt";
+  fill: "fb-black";
+}
+
+.progress-icon {
+  x: "50%";
+  y: 168;
+  font-size: 20;
+  text-anchor: middle;
+}
+
+.progress-value {
+  x: "50%";
+  y: 190;
+  text-anchor: middle;
+  font-size: 20;
+}
+
+.progress-goal {
+  x: "50%";
+  y: 54;
+  text-anchor: middle;
+  font-size: 14;
+}
+
 #steps {
-  fill: orangered;
-  font-family: "Tungsten-Medium";
+  fill: "fb-yellow-press";
 }
 
 #distance {
-  fill: royalblue;
-  font-family: "Tungsten-Medium";
+  fill: "fb-slate-press";
 }
 
 #calories {
-  fill: yellow;
-  font-family: "Tungsten-Medium";
+  fill: "fb-green-press";
 }
 
 #elevationGain {
-  fill: magenta;
-  font-family: "Tungsten-Medium";
+  fill: maroon;
 }
 
 #activeZoneMinutes {
   fill: green;
-  font-family: "Tungsten-Medium";
-}
-
-.progress {
-  x: 26;
-  y: 13;
-  height: 7;
-  width: 110;
-}
-
-.line {
-  x: 26;
-  y: 16;
-  height: 1;
-  width: 100%-44;
-}
-
-.tgt-no {
-  cx: 100%-18;
-  cy: 16;
-  r: 4;
-}
-
-.tgt-yes {
-  cx: 100%-18;
-  cy: 16;
-  r: 8;
-  opacity: 0;
-}
-
-.icon {
-  x: 4;
-  y: 14;
-  font-size: 20;
-}
-
-/*
-.bar-icon {
-  width: 30;
-  height: 30;
-  x:0;
-  y:0;
-}
-*/
-
-.count {
-  font-size: 22;
-  x: 26;
-  y: 10;
-  text-length: 12;
-}
-
-.countGoal {
-  font-size: 22;
-  x: "100%-24";
-  y: 10;
-  text-length: 12;
 }
 
 /* Profile *********************************** */
@@ -184,7 +121,7 @@
   y: "50%";
   font-size: 24;
   text-anchor: end;
-  fill: "fb-gray";
+  fill: "fb-black";
 }
 
 .value-icon {
@@ -199,5 +136,5 @@
   y: "50%";
   font-size: 24;
   text-anchor: start;
-  fill: "fb-gray";
+  fill: "fb-black";
 }
