--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,6 +1,6 @@
 #root {
   font-family: "Tungsten-Medium";
-  fill: "fb-green-press";
+  fill: "fb-white";
 }
 
 #background {
@@ -8,7 +8,7 @@
   y: 0;
   width: 100%;
   height: 100%;
-  fill: "white";
+  fill: "fb-black";
 }
 
 #torch {
@@ -43,14 +43,12 @@
   y: "50%";
   font-size: 100;
   text-anchor: end;
-  fill: "fb-black";
 }
 
 #clock-minutes {
   x: "50%-16";
   y: "50%";
   font-size: 100;
-  fill: "fb-extra-dark-gray";
 }
 
 #clock-seconds {
@@ -63,12 +61,12 @@
 
 .progress-background {
   x1: "50%";
-  y1: 40;
+  y1: 36;
   x2: "50%";
   y2: 172;
   stroke-width: 32;
   stroke-linecap: "butt";
-  fill: "darkseagreen";
+  fill: "fb-extra-dark-gray";
 }
 
 .progress-bar {
@@ -78,7 +76,7 @@
   y2: 172;
   stroke-width: 32;
   stroke-linecap: "butt";
-  fill: "fb-black";
+  fill: "fb-green-press";
 }
 
 .progress-icon {
@@ -97,7 +95,7 @@
 
 .progress-goal {
   x: "50%";
-  y: 54;
+  y: 50;
   text-anchor: middle;
   font-size: 16;
 }
